[project]
name = "raisin"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jjfaulkner", email = "jamesjohnf@btinternet.com" }
]
dependencies = [
    "numpy>=2.2.3",
    "typer>=0.15.2",
    "streamlit>=1.43.2",
    "scipy>=1.15.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
density_estimate =  "cancer_prediction.cli:app"

[tool.hatch.build.targets.wheel]
packages = [{include = "src/raisin"}]
